app/assets/stylesheets/static_pages.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
@import "bootstrap-sprockets";
@import "bootstrap";

// general app styles
.app-body {
  padding-left: 0;
  padding-right: 0;
}

// sign up form format

.splash-form {
  max-width: 500px;
}

.patient-doctor-toggle {
  max-width: 500px;
  margin-bottom: 15px;
}

// navbar formats

.logo {
  max-width: 200px;
}

.nav-block {
  display: inline-block;
}

.nav-button {
  display: inline-block;
  float: right;
  margin-right: 10px;
  margin-left: 10px;
}

.navbar-custom {
  margin-bottom: 0;
}

.welcome-message {
  padding-top: 7px;
  text-align: right;
  display: inline-block;
  max-width: 250px;
}

// splash page formats

.splash-body {
  background-color: #fc636b;
  height: 400px;
  margin-top: 0;
}

.headline {
  color: #ffffff;
}

.blockout {
  display: block;
}

.blockout-space {
  height: 80px;
}

.blockout-small {
  height: 40px;
}

.splash-button {
  display: block;
  margin-left: auto;
  margin-right: auto;
  color: #ffffff;
  width: 180px;
}

.start-landing {
  background-color: #a177ff;
  border-color: #a177ff;
}

.start-learn {
  background-color: #3396FB;
  border-color: #3396FB;
}

// Dashboard
.content-view {
  padding: 0;
}
.dashboard-background {
  background-color: #cbe6ec;
  margin-left: 200px;
  margin-right: 0;
  margin-top: 0;
  margin-bottom: 0;
  width: auto;
  position: relative;
  overflow: auto;
  height: 100%;
  min-height: 500px;
}

.sidebar {
  background-color: #2e3c54;
  margin-left: 0;
  position: fixed;
  width: 200px;
  height: 100%;
  min-height: 500px;
}

.tabs {
  display: inline-block;
  width: 100%;
  max-width: 500px;
  margin: 15px;
}

.test {
  border: 1px solid red;
}

